# rebos

./: ADDING_TO_GENERATION.txt  Cargo.toml  LICENSE  README.md  todo.tdl
.github/workflows/: rust.yml
src/: cli.rs  config.rs  convert.rs  dir.rs  filesystem.rs  flatpak.rs  generation.rs  generation_boilerplate.rs  hook.rs  library.rs  lock.rs  log.rs  main.rs  management.rs  obj_print.rs  obj_print_boilerplate.rs  package_management.rs  pkg_managers.rs  pkg_managers_boilerplate.rs  places.rs  proc.rs  repeated.rs  system.rs  utils.rs
src/generation/: management.rs  mod.rs
src/pkg_managers/: cargo.rs  mod.rs  pkg_manager.rs
