[package]
name = "rebos"
authors = ["Jackson Novak <jacksonnovak@proton.me>"]
version = "1.6.1"
edition = "2021"
description = "NixOS-like reproducibility for any Linux distro."
license = "GPL-3.0-or-later"
repository = "https://gitlab.com/Oglo12/rebos"

[profile.bench]
lto = "thin"
debug = 1
strip = false

[profile.release]
debug = 0
lto = true
opt-level = 3
codegen-units = 1
strip = true

[dependencies]
clap = {version = "4.4.3", features = ["derive"]}
colored = "2.0.4"
dirs = "5.0.1"
fspp = "2.0.0"
hostname = "0.3.1"
piglog = { version = "1.4.1", features = ["clap_derive"] }
serde = {version = "1.0.188", features = ["derive"]}
toml = "0.7.8"
users = "0.11.0"
